2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game-2048
        image: 329599623141.dkr.ecr.us-east-2.amazonaws.com/bishnu-cicd:12
        ports:
        - containerPort: 80
